--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "@tanstack/react-query": "^5.40.0",
+    "antd": "^5.18.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
@@ -25,6 +26,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.22.3",
