--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dropdown": "^1.11.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "sort-by": "^0.0.2",
