--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.11.0"
+    "sweetalert2": "^11.11.0",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
