--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "react-dropdown": "^1.11.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.11.0",
+    "sweetalert2": "^11.6.13",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
