--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
+    "recharts": "^2.12.7",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.6.13",
     "swiper": "^11.1.4"
