--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "firebase": "^10.12.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.5.4",
